<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification"
        app:actionLayout="@layout/custom_notification_icon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_streaming"
        android:icon="@drawable/ic_connect"
        android:title="@string/media"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_add_black"
        android:title="@string/add_post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new_question"
        android:icon="@drawable/ic_add_black"
        android:title="@string/add_questions"
        app:showAsAction="ifRoom" />

</menu>
