<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorPrimaryDark"
    >
    <HorizontalScrollView
        android:scrollbars="none"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:padding="10dp"
                android:text="@string/message_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/round_background_2"
                android:padding="10dp"
                android:text="@string/text_messages"
                android:textColor="#FFF" />

            <TextView
                android:layout_marginStart="10dp"
                android:background="@drawable/round_background"
                android:padding="10dp"
                android:id="@+id/text_reply"
                android:textColor="#FFF"
                android:text="@string/text_messages_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/round_background_2"
                android:padding="10dp"
                android:text="@string/image_messages"
                android:textColor="#FFF" />

            <TextView
                android:layout_marginStart="10dp"
                android:background="@drawable/round_background"
                android:padding="10dp"
                android:id="@+id/image_reply"
                android:textColor="#FFF"
                android:text="@string/image_messages_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </HorizontalScrollView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_below="@+id/navigator"
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/messageList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:id="@+id/default_item"
                android:visibility="gone"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:tint="#4CAF50"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@drawable/ic_question_answer_black_24dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/default_title"
                    fontPath="fonts/GoogleSans_Bold.ttf"
                    android:textSize="19sp"
                    android:gravity="center"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/no_messages_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/default_text"
                    android:gravity="center"
                    android:text="@string/messages_shown_here"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>
