<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.account.LoginActivity">

    <ImageView
        android:id="@+id/header"
        android:scaleType="fitStart"
        android:visibility="gone"
        android:src="@mipmap/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/waveHeader"
        android:layout_width="wrap_content"
        android:layout_height="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:mwhCloseColor="@color/colorAccentt"
        app:mwhColorAlpha="0.5"
        app:mwhGradientAngle="45"
        app:mwhProgress="1"
        app:mwhStartColor="#602EBA"
        app:mwhVelocity="1"
        app:mwhWaveHeight="53dp"
        app:mwhWaves="MultiWave">
    </com.scwang.wave.MultiWaveHeader>

    <ScrollView
        android:overScrollMode="never"
        android:layout_marginTop="90dp"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:layout_marginTop="20dp"
                fontPath="fonts/bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textSize="32sp"
                tools:ignore="MissingPrefix" />

            <TextView
                fontPath="fonts/bold.ttf"
                android:layout_below="@+id/welcome_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="32sp"
                tools:ignore="MissingPrefix" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_holder"
                android:hint="@string/register_email"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_holder"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_holder"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_gravity="center"
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:onClick="onForgotPassword"
                android:text="@string/forgot_password"
                android:textColor="#989898"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_gravity="center"
                android:id="@+id/button"
                android:padding="10dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onLogin"
                android:text="@string/sigh_in"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <ProgressBar
                android:layout_marginTop="20dp"
                android:id="@+id/progressBar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />


        </LinearLayout>

    </ScrollView>


    <Button
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom|center"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRegister"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/new_here"
        android:textColor="#989898"
        android:textAllCaps="false"
        android:textSize="16sp" />

</FrameLayout>
